// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with label 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="checkbox-group-19-label-24"
      accessible={true}
      data-blade-component="checkbox-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {},
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.subdued.lowContrast"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="bold"
            lineHeight={50}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(217, 18%, 45%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(217, 56%, 17%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              , 
            </Text>
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Apple
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Mango
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Orange
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CheckboxGroup /> should render with label 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="checkbox-group-49-label-54"
      accessible={true}
      data-blade-component="checkbox-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {},
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.subdued.lowContrast"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="bold"
            lineHeight={50}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(217, 18%, 45%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(217, 56%, 17%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              , Select one
            </Text>
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Apple
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Mango
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {},
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.subtle.lowContrast"
                      data-blade-component="base-text"
                      fontFamily="text"
                      fontSize={100}
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(216, 27%, 36%, 1)",
                            "fontFamily": "Lato",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Orange
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          data-blade-component="base-box"
          style={
            [
              {},
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.muted.lowContrast"
              data-blade-component="base-text"
              fontFamily="text"
              fontSize={50}
              fontStyle="italic"
              lineHeight={50}
              style={
                [
                  {
                    "color": "hsla(216, 16%, 60%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 11,
                    "fontStyle": "italic",
                    "fontWeight": "400",
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Select one
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
